name:          queryforest
version:       0.1.0.0
synopsis:      Query trees for metric space

-- description:
license:       MIT
license-file:  LICENSE
author:        lostbean
maintainer:    talktoedgar@gmail.com
category:      Data
build-type:    Simple
cabal-version: >=1.10

flag test
  description: Build the exectable using command line.
  default:     False

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  default-language: Haskell2010
  build-depends:
      base         >=4.7  && <5
    , queryforest
    , random       >=1.1
    , vector       >=0.10

  hs-source-dirs:   test
  ghc-options:
    -Wall -O2 -rtsopts -funbox-strict-fields -fprof-auto -threaded
    -fprof-cafs

benchmark bench
  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  default-language: Haskell2010
  build-depends:
      base         >=4.7  && <5
    , queryforest
    , random       >=1.1
    , time         >=1.4
    , vector       >=0.10

  hs-source-dirs:   test
  ghc-options:
    -Wall -O2 -rtsopts -funbox-strict-fields -fprof-auto -threaded
    -fprof-cafs

library
  exposed-modules:
    Data.BlazeVPtree
    Data.KDtree
    Data.MVPtree
    Data.VPtree

  other-modules:    Data.TreeTools
  build-depends:
      base               >=4.7  && <5
    , random             >=1.0
    , vector             >=0.10
    , vector-algorithms  >=0.6

  hs-source-dirs:   src
  exposed:          True
  buildable:        True
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -funbox-strict-fields -fprof-auto -fprof-cafs
